tests/experimental/error/function_no_pre_in_body.lus
-- Illegal `pre` in function.
function blah ( in: int ) returns ( out: int ) ;
let
  out = pre in ;
tel
